updating mermaid diagrams

--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -10,72 +10,115 @@ In this guide, you'll learn how to manage secrets in your FastStore project usin
 
 ## Secrets flow
 
-The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a successful flow that illustrates how WebOps determines the appropriate provider based on the project’s settings and then delegates the build and deployment process accordingly.
+The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a successful flow that illustrates how WebOps determines the appropriate provider to use based on the project’s settings and then delegates the build and deployment process accordingly.
+
+### User request and secret storage
 
 ```mermaid
 sequenceDiagram
-autonumber
-  actor User as User
+  actor A1 as User
   participant WebOps as WebOps
   participant AWS as AWS Secrets Manager
-  participant ProviderA as Provider A
-  participant ProviderB as Provider B
-  participant ProviderN as Provider N
 
   %% 1. User initiates secret creation/update/deletion
-  User ->> WebOps: Request to create/update/delete secret
+  A1 ->> WebOps: Request to create/update/delete secret
 
   %% 2. WebOps stores secret in AWS Secrets Manager
   WebOps ->> AWS: Store/Update/Delete secret
-  AWS -->> WebOps: Confirm secret storage/update/deletion
 
-  %% 3. WebOps determines which provider to use for build/deployment
-  WebOps ->> WebOps: Select configured provider
-
-  %% 4. WebOps propagates secret to selected provider and initiates build
-  alt Provider A
-    WebOps ->> ProviderA: Transmit secret securely
-    ProviderA ->> ProviderA: Consume secret, prepare environment
-    WebOps ->> ProviderA: Start build/deployment
-    ProviderA ->> ProviderA: Build and host application
-    ProviderA -->> WebOps: Send status update
-  else Provider B
-    WebOps ->> ProviderB: Transmit secret securely
-    ProviderB ->> ProviderB: Consume secret, prepare environment
-    WebOps ->> ProviderB: Start build/deployment
-    ProviderB ->> ProviderB: Build and host application
-    ProviderB -->> WebOps: Send status update
-  else Provider N
-    WebOps ->> ProviderN: Transmit secret securely
-    ProviderN ->> ProviderN: Consume secret, prepare environment
-    WebOps ->> ProviderN: Start build/deployment
-    ProviderN ->> ProviderN: Build and host application
-    ProviderN -->> WebOps: Send status update
+  alt Update Conflict Detected
+    AWS -->> WebOps: Conflict/Error (update conflict)
+    WebOps -->> A1: Prompt to retry update
+    A1 ->> WebOps: Retry update request
+    WebOps ->> AWS: Retry store/update secret
+    AWS -->> WebOps: Confirm secret storage/update/deletion
+  else No Conflict
+    AWS -->> WebOps: Confirm secret storage/update/deletion
   end
 
-  %% 5. Feedback to user
-  WebOps -->> User: Notify build and secret operation success
+  %% 3. WebOps determines which provider to use for build/deployment
+  WebOps ->> WebOps: Identify cloud provider
 ```
 
-1. User initiates request
-The user initiates a request to create, update, or delete a secret through the WebOps interface.
+See below this flow in more detail:
 
-2. Secret storage
-a. WebOps forwards the request made by the user (create, update, or delete a secret) to AWS Secrets Manager.
-b. AWS confirms the request ("and store the secret"?).
+1. The user initiates a request to create, update, or delete a secret through the WebOps interface.
+2. WebOps forwards the request made by the user (create, update, or delete a secret) to AWS Secrets Manager.
+3. If AWS detects a conflict, it returns an error to WebOps.
+4. When there is a conflict, WebOps notifies the user to retry the update. The user then resubmits the request, and WebOps tries again with AWS. If the error persists, open a ticket to [VTEX support](https://help.vtex.com/en/support).
+5. Upon successful operation, the AWS Secrets Manager confirms the action with WebOps.
+6. Once the secret management step is complete, WebOps identifies the cloud provider set for the project.
 
-4. Provider selection
-a. With the AWS confirmation of the request, WebOps identifies the appropriate deployment provider based on the project’s configuration.
-b. WebOps securely transmits the secret information to the selected provider.
+### Secret propagation
 
-5. Secret deployment
-a. The chosen provider consumes the secret and prepares the environment.
-b. WebOps triggers the build and the secret deployment process.
-c. The provider builds and hosts the application and returns a status update to WebOps.
+```mermaid
+sequenceDiagram
+  participant WebOps as WebOps
+  participant AWS as AWS Secrets Manager
+  participant Provider A as Provider A
+  participant Provider B as Provider B
+  participant Provider N as Provider N
 
-6. WebOps notification to the user
-a. Provider sends status update to WebOps.
-b. In the WebOps interface, the user receives confirmation of the successful secret operation and its deployment.
+ %% 4. Build flow with secrets propagation
+  Note right of WebOps: Decision: Choose provider based on project configuration
+
+  alt If Provider A
+    WebOps ->> Provider A: Send build info
+    Provider A ->> Provider A: Build and host application
+    alt Build success
+      Provider A -->> WebOps: Send build status (success)
+    else Build failed
+      Provider A -->> WebOps: Send build status and logs (error)
+      Note right of WebOps: Error visible in Deploys tab
+    end
+  else If Provider B
+    WebOps ->> Provider B: Send build info
+    Provider B ->> Provider B: Build and host application
+    alt Build success
+      Provider B -->> WebOps: Send build status (success)
+    else Build failed
+      Provider B -->> WebOps: Send build status and logs (error)
+      Note right of WebOps: Error visible in Deploys tab
+    end
+  else If Provider N
+    WebOps ->> Provider N: Send build info
+    Provider N ->> Provider N: Build and host application
+    alt Build success
+      Provider N -->> WebOps: Send build status (success)
+    else Build failed
+      Provider N -->> WebOps: Send build status and logs (error)
+      Note right of WebOps: Error visible in Deploys tab
+    end
+  end
+```
+
+See below this flow in more detail:
+
+7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project. 
+8. WebOps sends the build information to the identified provider (Provider A, B, or N).
+9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:
+10. The provider performs the build and deployment steps.
+11. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns both the build status (error) and associated logs to WebOps.
+
+### Deployment feedback
+
+```mermaid
+sequenceDiagram
+  actor A1 as User
+  participant WebOps as WebOps
+
+  %% 5. Feedback to user
+  alt Build successful
+    WebOps -->> A1: Status notification
+  else Build failed
+    Note left of WebOps: No message is sent to the user. Check the Deploys tab for logs.
+  end
+```
+
+See below this flow in more detail:
+
+10. When a build succeeds, the user receives a status notification on WebOps. 
+11. When a build fails, the user is expected to check the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab, where the build errors and associated logs are available for further investigation.
 
 ## Instructions
 
