testing mermaid formats

--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -12,7 +12,15 @@ In this guide, you'll learn how to manage secrets in your FastStore project usin
 
 The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a successful flow that illustrates how WebOps determines the appropriate provider to use based on the project’s settings and then delegates the build and deployment process accordingly.
 
-### User request and secret storage
+1. The user initiates a request to create, update, or delete a secret through the WebOps interface.
+2. WebOps forwards the request made by the user (create, update, or delete a secret) to AWS Secrets Manager.
+3. If AWS detects a conflict, it returns an error to WebOps.
+4. When there is a conflict, WebOps notifies the user to retry the update. The user then resubmits the request, and WebOps tries again with AWS. If the error persists, open a ticket to [VTEX support](https://help.vtex.com/en/support).
+5. Upon successful operation, the AWS Secrets Manager confirms the action with WebOps.
+6. Once the secret management step is complete, WebOps identifies the cloud provider set for the project.
+
+<details>
+<summary>User request and secret storage</summary>
 
 ```mermaid
 sequenceDiagram
@@ -40,18 +48,11 @@ sequenceDiagram
   WebOps ->> WebOps: Identify cloud provider
 ```
 
-See below this flow in more detail:
-
-1. The user initiates a request to create, update, or delete a secret through the WebOps interface.
-2. WebOps forwards the request made by the user (create, update, or delete a secret) to AWS Secrets Manager.
-3. If AWS detects a conflict, it returns an error to WebOps.
-4. When there is a conflict, WebOps notifies the user to retry the update. The user then resubmits the request, and WebOps tries again with AWS. If the error persists, open a ticket to [VTEX support](https://help.vtex.com/en/support).
-5. Upon successful operation, the AWS Secrets Manager confirms the action with WebOps.
-6. Once the secret management step is complete, WebOps identifies the cloud provider set for the project.
-
 ### Secret propagation
 
-```mermaid
+<Tabs items={['Diagram', 'Flow details']} defaultIndex="0">
+<Tab>
+ ```mermaid
 sequenceDiagram
   participant WebOps as WebOps
   participant AWS as AWS Secrets Manager
@@ -91,16 +92,16 @@ sequenceDiagram
     end
   end
 ```
-
-See below this flow in more detail:
-
-7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project. 
-8. WebOps sends the build information to the identified provider (Provider A, B, or N).
-9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:
-10. The provider performs the build and deployment steps.
-11. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns both the build status (error) and associated logs to WebOps.
+</Tab>
+<Tab>
+7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.<be>8. WebOps sends the build information to the identified provider (Provider A, B, or N).<br>9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:<br>&nbsp;&nbsp;a. The provider performs the build and deployment steps.<br>&nbsp;&nbsp;a. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns the build status (error) and associated logs to WebOps.
+</Tab>
+</Tabs>
 
 ### Deployment feedback
+
+10. When a build succeeds, the user receives a status notification on WebOps. 
+11. When a build fails, the user is expected to check the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab, where the build errors and associated logs are available for further investigation.
 
 ```mermaid
 sequenceDiagram
@@ -114,11 +115,6 @@ sequenceDiagram
     Note left of WebOps: No message is sent to the user. Check the Deploys tab for logs.
   end
 ```
-
-See below this flow in more detail:
-
-10. When a build succeeds, the user receives a status notification on WebOps. 
-11. When a build fails, the user is expected to check the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab, where the build errors and associated logs are available for further investigation.
 
 ## Instructions
 
