--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -47,6 +47,7 @@ sequenceDiagram
   %% 3. WebOps determines which provider to use for build/deployment
   WebOps ->> WebOps: Identify cloud provider
 ```
+</details>
 
 ### Secret propagation
 
