--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -35,7 +35,7 @@ sequenceDiagram
   WebOps ->> AWS: Store/Update/Delete secret
 
   alt Update Conflict Detected
-    AWS -->> WebOps: Conflict/Error (update conflict)
+    AWS -->> WebOps: Conflict/Error
     WebOps -->> A1: Prompt to retry update
     A1 ->> WebOps: Retry update request
     WebOps ->> AWS: Retry store/update secret
@@ -49,8 +49,8 @@ sequenceDiagram
 ```
 </details>
 
-### Secret propagation
-
+<details>
+<summary>Secret propagation</summary>
 <Tabs items={['Diagram', 'Flow details']} defaultIndex="0">
 <Tab>
  ```mermaid
@@ -95,9 +95,10 @@ sequenceDiagram
 ```
 </Tab>
 <Tab>
-7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.<be>8. WebOps sends the build information to the identified provider (Provider A, B, or N).<br>9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:<br>&nbsp;&nbsp;a. The provider performs the build and deployment steps.<br>&nbsp;&nbsp;a. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns the build status (error) and associated logs to WebOps.
+7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.<br>8. WebOps sends the build information to the identified provider (Provider A, B, or N).<br>9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:<br>&nbsp;&nbsp;a. The provider performs the build and deployment steps.<br>&nbsp;&nbsp;b. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns the build status (error) and associated logs to WebOps.
 </Tab>
 </Tabs>
+</details>
 
 ### Deployment feedback
 
