--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -49,8 +49,8 @@ sequenceDiagram
 ```
 </details>
 
-<details>
-<summary>Secret propagation</summary>
+### Secret propagation
+
 <Tabs items={['Diagram', 'Flow details']} defaultIndex="0">
 <Tab>
  ```mermaid
@@ -98,7 +98,6 @@ sequenceDiagram
 7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.<br>8. WebOps sends the build information to the identified provider (Provider A, B, or N).<br>9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:<br>&nbsp;&nbsp;a. The provider performs the build and deployment steps.<br>&nbsp;&nbsp;b. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns the build status (error) and associated logs to WebOps.
 </Tab>
 </Tabs>
-</details>
 
 ### Deployment feedback
 
