--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -12,6 +12,8 @@ In this guide, you'll learn how to manage secrets in your FastStore project usin
 
 The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a successful flow that illustrates how WebOps determines the appropriate provider to use based on the project’s settings and then delegates the build and deployment process accordingly.
 
+### User request and secret storage
+
 1. The user initiates a request to create, update, or delete a secret through the WebOps interface.
 2. WebOps forwards the request made by the user (create, update, or delete a secret) to AWS Secrets Manager.
 3. If AWS detects a conflict, it returns an error to WebOps.
@@ -47,12 +49,20 @@ sequenceDiagram
   %% 3. WebOps determines which provider to use for build/deployment
   WebOps ->> WebOps: Identify cloud provider
 ```
+
 </details>
 
 ### Secret propagation
 
-<Tabs items={['Diagram', 'Flow details']} defaultIndex="0">
-<Tab>
+7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.
+8. WebOps sends the build information to the identified provider (Provider A, B, or N).
+9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:
+  a. The provider performs the build and deployment steps.
+  b. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns the build status (error) and associated logs to WebOps.
+
+<details>
+<summary>Secret propagation</summary>
+
  ```mermaid
 sequenceDiagram
   participant WebOps as WebOps
@@ -93,16 +103,16 @@ sequenceDiagram
     end
   end
 ```
-</Tab>
-<Tab>
-7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.<br>8. WebOps sends the build information to the identified provider (Provider A, B, or N).<br>9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:<br>&nbsp;&nbsp;a. The provider performs the build and deployment steps.<br>&nbsp;&nbsp;b. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns the build status (error) and associated logs to WebOps.
-</Tab>
-</Tabs>
+
+</details>
 
 ### Deployment feedback
 
 10. When a build succeeds, the user receives a status notification on WebOps. 
 11. When a build fails, the user is expected to check the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab, where the build errors and associated logs are available for further investigation.
+
+<details>
+<summary>Deployment feedback</summary>
 
 ```mermaid
 sequenceDiagram
@@ -116,6 +126,8 @@ sequenceDiagram
     Note left of WebOps: No message is sent to the user. Check the Deploys tab for logs.
   end
 ```
+
+</details>
 
 ## Instructions
 
