--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -16,10 +16,9 @@ The Secrets feature employs a structured method for interacting with deployment 
 
 1. The user initiates a request to create, update, or delete a secret through the WebOps interface.
 2. WebOps forwards the request made by the user (create, update, or delete a secret) to AWS Secrets Manager.
-3. If AWS detects a conflict, it returns an error to WebOps.
-4. When there is a conflict, WebOps notifies the user to retry the update. The user then resubmits the request, and WebOps tries again with AWS. If the error persists, open a ticket to [VTEX support](https://help.vtex.com/en/support).
-5. Upon successful operation, the AWS Secrets Manager confirms the action with WebOps.
-6. Once the secret management step is complete, WebOps identifies the cloud provider set for the project.
+  a. If AWS detects a conflict, it returns an error to WebOps. When there is a conflict, WebOps notifies the user with the message `Fail to add (update or delete) new secret. Please, try again.`. Check the error in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab.
+  b. Upon successful operation, the AWS Secrets Manager confirms the action with WebOps.
+3. Once the secret management step is complete, WebOps identifies the cloud provider set for the project.
 
 <details>
 <summary>User request and secret storage</summary>
@@ -42,7 +41,7 @@ sequenceDiagram
     A1 ->> WebOps: Retry update request
     WebOps ->> AWS: Retry store/update secret
     AWS -->> WebOps: Confirm secret storage/update/deletion
-  else No Conflict
+  else No Conflict/Error
     AWS -->> WebOps: Confirm secret storage/update/deletion
   end
 
@@ -54,9 +53,9 @@ sequenceDiagram
 
 ### Secret propagation
 
-7. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.
-8. WebOps sends the build information to the identified provider (Provider A, B, or N).
-9. The selected provider is responsible for building and hosting the application. The building process follows this pattern:
+4. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.
+5. WebOps sends the build information to the identified provider (Provider A, B, or N).
+6. The selected provider is responsible for building and hosting the application. The building process follows this pattern:
   a. The provider performs the build and deployment steps.
   b. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns the build status (error) and associated logs to WebOps.
 
@@ -108,8 +107,8 @@ sequenceDiagram
 
 ### Deployment feedback
 
-10. When a build succeeds, the user receives a status notification on WebOps. 
-11. When a build fails, the user is expected to check the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab, where the build errors and associated logs are available for further investigation.
+7. When a build succeeds, the user receives a status notification on WebOps. 
+8. When a build fails, the user is expected to check the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab, where the build errors and associated logs are available for further investigation.
 
 <details>
 <summary>Deployment feedback</summary>
@@ -135,19 +134,24 @@ To manage your secrets, access your [FastStore WebOps dashboard](https://develop
 
 In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#secrets) section, you can [create](#creating-secrets), [update](#updating-secrets), or [delete](#deleting-secrets) secrets following the steps below.
 
+>ℹ Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
+
 ### Creating secrets
 
 1. Input the related values in the `Key` and `Value` fields.
-2. Click `Add`. You’ll see the message: `New Secret added successfully. Changes will take effect in the next successful deployment.`
-3. Click on `Redeploy`. You’ll see the message: `Creating deployment…`, then `Deployment created successfully`.
+2. Click `Add`. A pop-up with `New Secret added successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
+3. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+
+![creating-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/creating-secrets___14633df5e1e1385934d7f0854f00d340.gif)
 
 ### Updating secrets
 
 1. Go to the `Current Keys` section.
 2. Alongside the secret you need to update, click `⋮`, then click `Edit`.
-3. Update the secret in the modal that will open.
-4. Click `Update`. You’ll see the message: `Secret updated successfully. Changes will take effect in the next successful deployment.`
-5. Click on `Redeploy`. You’ll see the message: `Creating deployment…`, then `Deployment created successfully`.
+3. Click `Update`.  A pop-up with `Secret updated successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
+4. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+
+![updating-secrets]()
 
 ### Deleting secrets
 
@@ -157,7 +161,7 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 
    >⚠ This action can’t be undone.
 
-4. Click `Delete secret`. You’ll see the message: `Secret deleted successfully. Changes will take effect in the next successful deployment.`
-5. Click on `Redeploy`. You’ll see the message: `Creating deployment…`, then `Deployment created successfully`.
+4. Click `Delete secret`. A pop-up with `Secret deleted successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
+5. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
 
->ℹ Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
+![deleting-secrets]()
