Apply suggestions from code review
Co-authored-by: Mariana Caetano Pereira <67270558+mariana-caetano@users.noreply.github.com>

--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -121,7 +121,7 @@ In the **Production domain** section, select the store domain from the dropdown 
 
 The **Current Domains** section displays the default and primary domains configured for your store. This section is a reference point to ensure your domains are correctly set up in WebOps. By checking this list, you can confirm whether your domains have been successfully added and are ready for use in the FastStore environment. 
 
-If your domain isn't listed, it may indicate an issue with the configuration or DNS settings that need to be addressed before proceeding with the go-live. If you follow the [external DNS settings](https://developers.vtex.com/docs/guides/faststore/go-live-1-configuring-external-dns) guide correctly and the problem persists, open a ticket to [VTEX support](https://help.vtex.com/en/support).
+> ⚠️ If your domain isn't listed, it may indicate an issue with the configuration or DNS settings that need to be addressed before proceeding with the go-live. If you follow the [external DNS settings](https://developers.vtex.com/docs/guides/faststore/go-live-1-configuring-external-dns) guide correctly and the problem persists, open a ticket to [VTEX support](https://help.vtex.com/en/support).
 
 ### Secrets
 
