updating secrets section

--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -133,6 +133,8 @@ In the **Secrets** section, define the **Key** and **Value** in their respective
 
 The **Current keys** section lists all secrets configured for your store. This list shows each secret’s key (the identifier), while the value is hidden by default for security reasons. You can toggle the visibility of a secret’s value if needed.
 
+In this section, you can update or delete an existing secret by clicking `⋮` and choosing the corresponding option, `Edit` or `Delete`.
+
 ## Deleting the project
 
 To delete your FastStore project, click the **More actions menu** (`⋮`). Then, click **Delete Project**.
