--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -155,7 +155,7 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 3. Click `Update`.  A pop-up with `Secret updated successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
 4. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
 
-![updating-secrets]()
+![updating-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/updating-secrets___41a012c6f441bf927d67a59448c19894.gif)
 
 ### Deleting secrets
 
@@ -168,4 +168,4 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 4. Click `Delete secret`. A pop-up with `Secret deleted successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
 5. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
 
-![deleting-secrets]()
+![deleting-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/deleting-secrets___c5b464f532114c9895ce49af2fd8c76b.gif)
