--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -138,13 +138,12 @@ To manage your secrets, access your [FastStore WebOps dashboard](https://develop
 
 In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#secrets) section, you can [create](#creating-secrets), [update](#updating-secrets), or [delete](#deleting-secrets) secrets following the steps below.
 
->ℹ Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
-
 ### Creating secrets
 
 1. Input the related values in the `Key` and `Value` fields.
 2. Click `Add`. A pop-up with `New Secret added successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
 3. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+4. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
 
 ![creating-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/creating-secrets___14633df5e1e1385934d7f0854f00d340.gif)
 
@@ -154,6 +153,7 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 2. Alongside the secret you need to update, click `⋮`, then click `Edit`.
 3. Click `Update`.  A pop-up with `Secret updated successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
 4. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+5. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
 
 ![updating-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/updating-secrets___41a012c6f441bf927d67a59448c19894.gif)
 
@@ -167,5 +167,8 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 
 4. Click `Delete secret`. A pop-up with `Secret deleted successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
 5. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+6. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
 
 ![deleting-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/deleting-secrets___c5b464f532114c9895ce49af2fd8c76b.gif)
+
+>ℹ If you tried to create, update, or delete a secret and received the error `Failed to create/update/delete secret. Please, try again.`, repeat the process. If the problem persists, open a ticket to [VTEX support](https://help.vtex.com/en/support).
