--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -2,15 +2,19 @@
 title: "Managing Secrets"
 ---
 
-Secrets are sensitive information, such as API keys, passwords, and tokens, that must be securely managed during the FastStore project deployment process. [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
+Secrets are sensitive information, such as passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment process. [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) now centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
 
 This functionality leverages [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) as a centralized repository for managing and retrieving secrets across all WebOps projects. As a result, secrets can be securely stored and accessed without embedding them directly within the project.
 
-In this guide, you'll learn how to manage secrets in your FastStore project using [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview).
+In the previous version, an empty `vtex.env` file needed to be at the project's root to enable secrets management. The key-value pairs were stored in the `secrets.revealed.json` file, then encrypted into `secrets.hidden.json` before being committed and pushed to the repository. In the current version, these files were deprecated, and you manage your secrets directly in the WebOps interface.
+
+>ℹ For local setups, use `vtex.env` and add this file to `.gitignore` to prevent version control from tracking it.
+
+In this guide, learn how to manage secrets in your FastStore project using WebOps.
 
 ## Secrets flow
 
-The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a successful flow that illustrates how WebOps determines the appropriate provider to use based on the project’s settings and then delegates the build and deployment process accordingly.
+The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a flow that illustrates how WebOps determines the appropriate provider based on the project’s settings and then delegates the build and deployment process accordingly.
 
 ### User request and secret storage
 
