--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -2,13 +2,13 @@
 title: "Managing Secrets"
 ---
 
-Secrets are sensitive information, such as passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment process. [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) now centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
+Secrets are sensitive information, such as API keys, passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment. [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) now centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
 
 This functionality leverages [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) as a centralized repository for managing and retrieving secrets across all WebOps projects. As a result, secrets can be securely stored and accessed without embedding them directly within the project.
 
 In the previous version, an empty `vtex.env` file needed to be at the project's root to enable secrets management. The key-value pairs were stored in the `secrets.revealed.json` file, then encrypted into `secrets.hidden.json` before being committed and pushed to the repository. In the current version, these files were deprecated, and you manage your secrets directly in the WebOps interface.
 
->ℹ For local setups, use `vtex.env` and add this file to `.gitignore` to prevent version control from tracking it.
+>⚠️ For local development, use the `vtex.env` file to define environment-specific secrets, such as API keys and tokens, needed to run and test your FastStore project on your local machine. This file is now exclusively for local setups and should always be added to `.gitignore` to prevent version control from tracking it. Since secrets stored in `vtex.env` are not propagated to cloud providers, any secrets you define locally will not be available in deployed environments via WebOps.
 
 In this guide, learn how to manage secrets in your FastStore project using WebOps.
 
