Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -2,16 +2,26 @@
 title: "Managing Secrets"
 ---
 
-Secrets are sensitive information, such as API keys, passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment. [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) now centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
+Secrets are sensitive information, such as API keys, passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment. 
+
+[WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
+
 
 This functionality leverages [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) as a centralized repository for managing and retrieving secrets across all WebOps projects. As a result, secrets can be securely stored and accessed without embedding them directly within the project.
 
-In the previous version, an empty `vtex.env` file needed to be at the project's root to enable secrets management. The key-value pairs were stored in the `secrets.revealed.json` file, then encrypted into `secrets.hidden.json` before being committed and pushed to the repository. In the current version, these files were deprecated, and you manage your secrets directly in the WebOps interface.
+>ℹ️ In FastStore vX.X, secrets management required an empty `vtex.env` file at the project's root. Secrets were defined in `secrets.revealed.json`, then encrypted into `secrets.hidden.json` before being committed to the main branch. In FastStore vX.X, this workflow has been deprecated - secrets are now managed directly through the WebOps interface.
 
->⚠️ For local development, use the `vtex.env` file to define environment-specific secrets, such as API keys and tokens, needed to run and test your FastStore project on your local machine. This file is now exclusively for local setups and should always be added to `.gitignore` to prevent version control from tracking it. Since secrets stored in `vtex.env` are not propagated to cloud providers, any secrets you define locally will not be available in deployed environments via WebOps.
+## Local development
+
+For local development, you must use the `vtex.env` file to define secrets needed to run your FastStore project locally. 
+
+The `vtex.env` file is only used in local environments and should always be added to `.gitignore` to avoid leaking secrets through version control. By adding it to `.gitignore`, secrets defined in the `vtex.env` file will not be available in deployed environments via WebOps.
 
 In this guide, learn how to manage secrets in your FastStore project using WebOps.
 
+## WebOps environment
+
+In WebOps, secrets are stored securely using AWS Secrets Manager and are automatically injected into the deployment process by WebOps. This ensures a secure, centralized, and consistent workflow across all supported cloud providers, without exposing secrets in your project code.
 ## Secrets flow
 
 The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a flow that illustrates how WebOps determines the appropriate provider based on the project’s settings and then delegates the build and deployment process accordingly.
@@ -146,7 +156,8 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 
 1. Input the related values in the `Key` and `Value` fields.
 2. Click `Add`. A pop-up with `New Secret added successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
-3. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+3. Click `Redeploy` to redeploy your website with the updated secret configuration. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+
 4. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
 
 ![creating-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/creating-secrets___14633df5e1e1385934d7f0854f00d340.gif)
