--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -7,7 +7,7 @@ Secrets are sensitive information, such as API keys, passwords, tokens, and envi
 [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
 
 
-This functionality leverages [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) as a centralized repository for managing and retrieving secrets across all WebOps projects. As a result, secrets can be securely stored and accessed without embedding them directly within the project.
+WebOps uses [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) to securely store and manage secrets in a centralized location. This ensures that sensitive information, such as API keys and environment variables, is kept out of your project’s codebase and is retrieved securely by WebOps during deployment.
 
 >ℹ️ In FastStore vX.X, secrets management required an empty `vtex.env` file at the project's root. Secrets were defined in `secrets.revealed.json`, then encrypted into `secrets.hidden.json` before being committed to the main branch. In FastStore vX.X, this workflow has been deprecated - secrets are now managed directly through the WebOps interface.
 
