--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -2,149 +2,19 @@
 title: "Managing Secrets"
 ---
 
-Secrets are sensitive information, such as API keys, passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment. 
+In this guide, you'll learn how to manage secrets in your FastStore project using [WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview).
 
-[WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers.
+Secrets are sensitive information, such as API keys, passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment.
 
+WebOps uses [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) to securely store and manage secrets in a centralized location. This ensures that sensitive information is kept out of your project’s codebase and is retrieved securely by WebOps during deployment.
 
-WebOps uses [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) to securely store and manage secrets in a centralized location. This ensures that sensitive information, such as API keys and environment variables, is kept out of your project’s codebase and is retrieved securely by WebOps during deployment.
-
->ℹ️ In FastStore vX.X, secrets management required an empty `vtex.env` file at the project's root. Secrets were defined in `secrets.revealed.json`, then encrypted into `secrets.hidden.json` before being committed to the main branch. In FastStore vX.X, this workflow has been deprecated - secrets are now managed directly through the WebOps interface.
+>ℹ️ In FastStore v1, secrets management required an empty `vtex.env` file at the project's root. Secrets were defined in `secrets.revealed.json` and then encrypted into `secrets.hidden.json` before being committed to the main branch. In FastStore v2+, this workflow has been deprecated - secrets are now managed directly through the WebOps interface.
 
 ## Local development
 
 For local development, you must use the `vtex.env` file to define secrets needed to run your FastStore project locally. 
 
 The `vtex.env` file is only used in local environments and should always be added to `.gitignore` to avoid leaking secrets through version control. By adding it to `.gitignore`, secrets defined in the `vtex.env` file will not be available in deployed environments via WebOps.
-
-In this guide, learn how to manage secrets in your FastStore project using WebOps.
-
-## WebOps environment
-
-In WebOps, secrets are stored securely using AWS Secrets Manager and are automatically injected into the deployment process by WebOps. This ensures a secure, centralized, and consistent workflow across all supported cloud providers, without exposing secrets in your project code.
-## Secrets flow
-
-The Secrets feature employs a structured method for interacting with deployment providers based on project-specific configurations. Below is an example of a flow that illustrates how WebOps determines the appropriate provider based on the project’s settings and then delegates the build and deployment process accordingly.
-
-### User request and secret storage
-
-1. The user initiates a request to create, update, or delete a secret through the WebOps interface.
-2. WebOps forwards the request made by the user (create, update, or delete a secret) to AWS Secrets Manager.
-  
-   a. If AWS detects a conflict, it returns an error to WebOps. When there is a conflict, WebOps notifies the user with the message `Fail to add (update or delete) new secret. Please, try again.`. Check the error in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab.
-    
-   b. Upon successful operation, the AWS Secrets Manager confirms the action with WebOps.
-3. Once the secret management step is complete, WebOps identifies the cloud provider set for the project.
-
-<details>
-<summary>User request and secret storage</summary>
-
-```mermaid
-sequenceDiagram
-  actor A1 as User
-  participant WebOps as WebOps
-  participant AWS as AWS Secrets Manager
-
-  %% 1. User initiates secret creation/update/deletion
-  A1 ->> WebOps: Request to create/update/delete secret
-
-  %% 2. WebOps stores secret in AWS Secrets Manager
-  WebOps ->> AWS: Store/Update/Delete secret
-
-  alt Update Conflict Detected
-    AWS -->> WebOps: Conflict/Error
-    WebOps -->> A1: Prompt to retry update
-    A1 ->> WebOps: Retry update request
-    WebOps ->> AWS: Retry store/update secret
-    AWS -->> WebOps: Confirm secret storage/update/deletion
-  else No Conflict/Error
-    AWS -->> WebOps: Confirm secret storage/update/deletion
-  end
-
-  %% 3. WebOps determines which provider to use for build/deployment
-  WebOps ->> WebOps: Identify cloud provider
-```
-
-</details>
-
-### Secret propagation
-
-4. After secret management is completed successfully, WebOps identifies which cloud provider is set for the project.
-5. WebOps sends the build information to the identified provider (Provider A, B, or N).
-6. The selected provider is responsible for building and hosting the application. The building process follows this pattern:
-  
-    a. The provider performs the build and deployment steps.
-
-    b. Upon completion, the provider communicates the build status back to WebOps. If it succeeds, the provider sends a `success` status to WebOps. If it fails, the provider returns the build status (error) and associated logs to WebOps.
-
-<details>
-<summary>Secret propagation</summary>
-
- ```mermaid
-sequenceDiagram
-  participant WebOps as WebOps
-  participant AWS as AWS Secrets Manager
-  participant Provider A as Provider A
-  participant Provider B as Provider B
-  participant Provider N as Provider N
-
- %% 4. Build flow with secrets propagation
-  Note right of WebOps: Decision: Choose provider based on project configuration
-
-  alt If Provider A
-    WebOps ->> Provider A: Send build info
-    Provider A ->> Provider A: Build and host application
-    alt Build success
-      Provider A -->> WebOps: Send build status (success)
-    else Build failed
-      Provider A -->> WebOps: Send build status and logs (error)
-      Note right of WebOps: Error visible in Deploys tab
-    end
-  else If Provider B
-    WebOps ->> Provider B: Send build info
-    Provider B ->> Provider B: Build and host application
-    alt Build success
-      Provider B -->> WebOps: Send build status (success)
-    else Build failed
-      Provider B -->> WebOps: Send build status and logs (error)
-      Note right of WebOps: Error visible in Deploys tab
-    end
-  else If Provider N
-    WebOps ->> Provider N: Send build info
-    Provider N ->> Provider N: Build and host application
-    alt Build success
-      Provider N -->> WebOps: Send build status (success)
-    else Build failed
-      Provider N -->> WebOps: Send build status and logs (error)
-      Note right of WebOps: Error visible in Deploys tab
-    end
-  end
-```
-
-</details>
-
-### Deployment feedback
-
-7. When a build succeeds, the user receives a status notification on WebOps. 
-8. When a build fails, the user is expected to check the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab, where the build errors and associated logs are available for further investigation.
-
-<details>
-<summary>Deployment feedback</summary>
-
-```mermaid
-sequenceDiagram
-  actor A1 as User
-  participant WebOps as WebOps
-
-  %% 5. Feedback to user
-  alt Build successful
-    WebOps -->> A1: Status notification
-  else Build failed
-    Note left of WebOps: No message is sent to the user. Check the Deploys tab for logs.
-  end
-```
-
-</details>
 
 ## Instructions
 
