--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -6,7 +6,7 @@ In this guide, you'll learn how to manage secrets in your FastStore project usin
 
 Secrets are sensitive information, such as API keys, passwords, tokens, and environment variables, that must be securely managed during the FastStore project deployment.
 
-WebOps uses [AWS Secrets Manager](https://aws.amazon.com/pt/secrets-manager/) to securely store and manage secrets in a centralized location. This ensures that sensitive information is kept out of your project’s codebase and is retrieved securely by WebOps during deployment.
+[WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) centralizes and standardizes secrets management, ensuring a consistent and secure process across all deployment providers. This ensures that sensitive information is kept out of your project’s codebase and is retrieved securely by WebOps.
 
 >ℹ️ In FastStore v1, secrets management required an empty `vtex.env` file at the project's root. Secrets were defined in `secrets.revealed.json` and then encrypted into `secrets.hidden.json` before being committed to the main branch. In FastStore v2+, this workflow has been deprecated - secrets are now managed directly through the WebOps interface.
 
@@ -20,15 +20,18 @@ The `vtex.env` file is only used in local environments and should always be adde
 
 To manage your secrets, access your [FastStore WebOps dashboard](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard) and navigate to the **Settings** tab.
 
+![secrets-settings](https://vtexhelp.vtexassets.com/assets/docs/src/secrets-settings___bce17b7268d1c6ece3e94fe2f35917ca.png)
+
 In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#secrets) section, you can [create](#creating-secrets), [update](#updating-secrets), or [delete](#deleting-secrets) secrets following the steps below.
 
 ### Creating secrets
 
-1. Input the related values in the `Key` and `Value` fields.
+1. In the `Key` field, enter the name of the secret, which serves as its unique identifier (example: VTEX_API_TOKEN, NEXT_SECRET_KEY). In the `Value` field, enter the corresponding sensitive information you want to store (example: the actual token, key, or password). 
 2. Click `Add`. A pop-up with `New Secret added successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
 3. Click `Redeploy` to redeploy your website with the updated secret configuration. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
-
 4. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
+
+   The secret created will be available in the **Current Keys** section.
 
 ![creating-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/creating-secrets___14633df5e1e1385934d7f0854f00d340.gif)
 
@@ -37,7 +40,7 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
 1. Go to the `Current Keys` section.
 2. Alongside the secret you need to update, click `⋮`, then click `Edit`.
 3. Click `Update`.  A pop-up with `Secret updated successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
-4. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+4. Click `Redeploy` to redeploy your website with the updated secret configuration. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
 5. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
 
 ![updating-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/updating-secrets___41a012c6f441bf927d67a59448c19894.gif)
@@ -51,7 +54,7 @@ In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-
    >⚠ This action can’t be undone.
 
 4. Click `Delete secret`. A pop-up with `Secret deleted successfully` will open. Then, you'll see the message `Secrets have changed. Changes will take effect in the next successful deployment.` alongside a `Redeploy` button.
-5. Click `Redeploy`. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
+5. Click `Redeploy` to redeploy your website with the updated secret configuration. You’ll see the message `Redeploying with secret changes`, then a pop-up with `Deployment created successfully` will open.
 6. Follow the deployment status in the [Deploys](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#deploys) tab of the WebOps dashboard.
 
 ![deleting-secrets](https://vtexhelp.vtexassets.com/assets/docs/src/deleting-secrets___c5b464f532114c9895ce49af2fd8c76b.gif)
