--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -20,7 +20,7 @@ The `vtex.env` file is only used in local environments and should always be adde
 
 To manage your secrets, access your [FastStore WebOps dashboard](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard) and navigate to the **Settings** tab.
 
-![secrets-settings](https://vtexhelp.vtexassets.com/assets/docs/src/secrets-settings___bce17b7268d1c6ece3e94fe2f35917ca.png)
+![secrets-settings-webops](https://vtexhelp.vtexassets.com/assets/docs/src/secrets-settings-webops___c4cc35670f1faf9ecabd30447d1ee9b6.gif)
 
 In the [Secrets](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#secrets) section, you can [create](#creating-secrets), [update](#updating-secrets), or [delete](#deleting-secrets) secrets following the steps below.
 
