--- a/docs/faststore/components/features/my-account/extensions.mdx
+++ b/docs/faststore/components/features/my-account/extensions.mdx
@@ -2,7 +2,7 @@
 title: "Extending My Account"
 ---
 
-In this guide, you'll learn how to extend the **My Account** page by either creating new pages or adding new sections to the default pages.
+In this guide, you'll learn how to extend the **My Account** page in your B2B store by either creating new pages or adding new sections to the default pages.
 
 Check if the [default My Account pages](https://developers.vtex.com/docs/guides/faststore/my-account-overview#default-my-account-pages) meet your needs. If not, you can [create a new page](#creating-new-pages) or [add a new section](#adding-new-sections) to better fit your requirements. These extensions allow you to customize the My Account experience without changing its default structure.
 
@@ -67,7 +67,6 @@ export default After
 ```
 
 >ℹ️ Every default page can have `before.tsx` and `after.tsx` extension sections.
-
 Based on the example above, the new section will be placed after the current content on the order details page:
 
 ![new-section-my-account](https://vtexhelp.vtexassets.com/assets/docs/src/new-section___1ff45ac89fb0c8629c705bdc6b5deb36.png)
