--- a/docs/faststore/components/features/my-account/extensions.mdx
+++ b/docs/faststore/components/features/my-account/extensions.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Extending My Account"
+hidden: true
 ---
 
 In this guide, you'll learn how to extend the **My Account** page in your B2B store by either creating new pages or adding new sections to the default pages.
@@ -67,6 +68,7 @@ export default After
 ```
 
 >ℹ️ Every default page can have `before.tsx` and `after.tsx` extension sections.
+
 Based on the example above, the new section will be placed after the current content on the order details page:
 
 ![new-section-my-account](https://vtexhelp.vtexassets.com/assets/docs/src/new-section___1ff45ac89fb0c8629c705bdc6b5deb36.png)
